kubernetes/apps/prod/longhorn/ingress-route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn
  namespace: longhorn-system
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`${HOST_LONGHORN}.${DOMAIN}`)
      services:
        - kind: Service
          name: longhorn-frontend
          namespace: longhorn-system
          port: 80
      middlewares:
        - name: x-forwarded-proto-https
          namespace: traefik
  tls:
    secretName: longhorn.${DOMAIN_INTERNAL}
